[package]
name = "changweibot"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.8", features = [
    "rt-multi-thread",
    "macros",
] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.197"
chrono = "0.4.37"
